# Quantis-Demo-

./: .gitignore  CMakeLists.txt  README.md
include/: MarketDataProvider.hpp  ScreenerEngine.hpp  Storage.hpp  TableRenderer.hpp  Types.hpp
include/quantis/anomaly/: AnomalyEngine.hpp  StatsBuffer.hpp
src/: MarketDataProvider.cpp  ScreenerEngine.cpp  Storage.cpp  TableRenderer.cpp  main.cpp
src/anomaly/: AnomalyEngine.cpp  StatsBuffer.c  StatsBuffer.cpp
